2006-03-06 Braden McDaniel  <braden@endoframe.com>

	Consolidate logic for picking a parser.

	* src/libopenvrml/openvrml/browser.cpp
	(parse_vrml(std::istream &, const std::string &, const
	std::string&, openvrml::scene,
	std::vector<boost::intrusive_ptr<openvrml::node> > &)): Added
	function; this consolidates the logic for picking the VRML97 or
	X3D-VRML parser.
	(externproto_node_class::load_proto::operator()() const): Delegate
	to parse_vrml.
	(openvrml::browser::create_vrml_from_stream(std::istream &, const
	std::string &)): Delegate to parse_vrml.
	(openvrml::scene::load(resource_istream &)): Delegate to
	parse_vrml.
	
2006-03-06 Braden McDaniel  <braden@endoframe.com>

	Expose constants for the VRML and X3D VRML MIME media types.

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::vrml_media_type): Added definition.
	(openvrml::x_vrml_media_type): Added definition.
	(openvrml::x3d_vrml_media_type): Added definition.
	(externproto_node_class::load_proto::operator()() const): Use
	vrml_media_type, x_vrml_media_type, and x3d_vrml_media_type
	instead of string literals.
	(openvrml::browser::create_vrml_from_stream(std::istream &, const
	std::string &)): Use vrml_media_type, x_vrml_media_type, and
	x3d_vrml_media_type instead of string literals.
	(openvrml::scene::load(resource_istream &)): Use vrml_media_type,
	x_vrml_media_type, and x3d_vrml_media_type instead of string
	literals.
	* src/libopenvrml/openvrml/browser.h
	(openvrml::vrml_media_type): Added declaration.
	(openvrml::x_vrml_media_type): Added declaration.
	(openvrml::x3d_vrml_media_type): Added declaration.
	* tests/parse_vrml97.cpp: Use openvrml::vrml_media_type.
	* tests/parse_x3dvrml.cpp: Use openvrml::x3d_vrml_media_type.

2006-03-05 Braden McDaniel  <braden@endoframe.com>

	* doc/Doxyfile: Set EXAMPLE_PATH.

2006-03-05 Braden McDaniel  <braden@endoframe.com>

	* doc/doxygen-header: Improved appearance of tables.

2006-03-05 Braden McDaniel  <braden@endoframe.com>
